refactor: remove userservice → gamification_db direct Repository access
Replace all gamificationservice.infrastructure.*Repository imports in userservice
with calls through gamificationservice Service layer. Resolves cross-service
repository coupling in preparation for MSA migration.

Changes (4 phases):

Phase 1: UserProfileCacheService
- UserExperienceRepository → UserExperienceService.getUserLevel()
- Add @Lazy injection to break circular dependency with UserExperienceService

Phase 2: FriendService (N+1 query optimization)
- UserExperienceRepository → UserExperienceService.getUserLevel/getUserLevelMap()
- UserTitleRepository → TitleService.getEquippedLeftTitleNameMap()
- Add batch query methods to eliminate N+1 in friend lists
- UserExperienceService.getUserLevelMap(): batch level lookup
- TitleService.getEquippedLeftTitleNameMap(): batch title lookup

Phase 3: HomeService
- ExperienceHistoryRepository → UserExperienceService (wrap findTopExpGainersByPeriod)
- UserExperienceRepository → UserExperienceService.getUserLevelMap()
- UserTitleRepository → TitleService.getEquippedTitleEntitiesByUserIds/ByUserId()
- UserExperienceService: add findTopExpGainersByPeriod/ByCategoryAndPeriod wrappers
- TitleService: add getEquippedTitleEntitiesByUserIds/ByUserId (entity return)

Phase 4: MyPageService (most complex — write + feedservice removal)
- UserExperienceRepository → UserExperienceService.getUserLevel/getOrCreateUserExperience()
- UserTitleRepository → TitleService (getUserTitleEntitiesWithTitle/countUserTitles/changeTitles)
- UserStatsRepository → UserStatsService (getOrCreateUserStats/calculateRankingPercentile)
- Remove ActivityFeedRepository dependency (feed write now handled via TitleEquippedEvent)
- Remove TransactionTemplate feedTransactionTemplate + PlatformTransactionManager
- TitleService.changeTitles(): move full business logic from MyPageService (60+ lines)
  - Validation, unequip, equip, TitleEquippedEvent publish, cache evict
  - Return TitleChangeResul